tests/compile_fail/comma.stderr
error: expected `,` following `match` arm
  --> tests/compile_fail/comma.rs:11:6
   |
11 |     }
   |      ^
   |
   = note: this error originates in the macro `delegate_match` (in Nightly builds, run with -Z macro-backtrace for more info)
help: missing a comma here to end this `match` arm
   |
11 |     },
   |      +
